# marm_behavior

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  pyproject.toml
env/: README.md  deep_learning.yml  deep_learning_windows_original.yml
marm_behavior/: __init__.py  __main__.py  _data_files.py  _tf_quiet.py  dlc_inference.py  el_to_csv.py  nn_postprocess.py  run.py
marm_behavior/data/: README.txt  __init__.py
marm_behavior/data/nn_reference/: README.txt
marm_behavior/depths/: depths_1.py
marm_behavior/extract/: extract_1.py  extract_2.py  extract_3.py
marm_behavior/features/: labels.py
marm_behavior/io/: csv_io.py  mat_io.py
marm_behavior/numerics/: helpers.py  hull.py
marm_behavior/pipeline/: orchestrators.py
marm_behavior/process/: postures.py  process_1.py  process_2.py  process_3.py  process_4.py
